--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ body {
 }
 
 input[name="search"]{
-    border-radius: 5px;
-    border: 3px solid #FF5722;;
+    border-radius: 4px;
+    border: 1.5px solid #FF5722;;
     /* background-color: rgb(255, 255, 255); */
 
 }
@@ -53,7 +53,7 @@ input[name="search"]::placeholder{
 header {
     background-color: #2f3c3c;
     width: 100%;
-    height: 20vh;
+    height: 18vh;
     margin-bottom: 15px;
     display: flex;
     justify-content: space-around;
@@ -78,6 +78,11 @@ header {
 .nav-bar li {
     display: flex;
     margin-left: 10px;
+    height: 18vh;
+
+}
+.nav-btn.btn-return{
+    padding:0px 8px
 }
 
 .nav-bar button:hover {
@@ -87,11 +92,10 @@ header {
 .nav-btn {
     transition: all 0.2s;
     border: 1px solid #FF9800;
-    height: 20vh;
-    padding: 0px 30px;
+    padding: 0px 20px;
     background-color: rgb(102, 112, 112);
     color: whitesmoke;
-    font-size: 14px;
+    font-size: 12px;
     border-radius: 4px;
     cursor: pointer;
 }
@@ -114,23 +118,36 @@ header {
     margin: 0px 80px;
 }
 
+.all-tools{
+    display: flex;
+    background-color: #66707024;
+    height: 60vh;
+    margin-right: 50px;
+    padding-left: 20px;
+    border-radius: 10px;
+    margin-top: 25px;
+    
+}
 
 .tools { 
+    margin-top: 20px;
     display: grid;
-    grid-template-columns: repeat(4, 80px);
-    grid-template-rows: repeat(auto-fit,50px);
+    gap: 7px;
+    grid-template-columns: repeat(5, 40px);
+    grid-template-rows: repeat(auto-fit,40px);
     grid-template-areas: 
-    "moveUp moveUp moveDown moveDown"
-    "sizeUp sizeUp sizeDown sizeDown"
-    "fillColor fontFamily fontFamily strokeColor"
-    "fillColor fontFamily fontFamily  strokeColor"
-    "alignLeft  alignCenter alignCenter  alignRight"
-    "alignLeft trash trash alignRight "
-    "switch switch switch switch"
-    "finish finish finish finish"
-    ". emojis emojis ."
+    ". moveUp moveUp moveDown moveDown"
+    ". sizeUp sizeUp sizeDown sizeDown"
+    ". fillColor fillColor strokeColor strokeColor"
+    /* ". fillColor fillColor strokeColor strokeColor" */
+    ". alignLeft alignCenter alignCenter alignRight"
+    " . fontFamily fontFamily fontFamily fontFamily"
+    ". switch switch finish finish "
+
+    ". save save trash trash"
     ;
 }  
+
 
 
 .changes-btn.btn1{
@@ -166,6 +183,7 @@ header {
 }
 
 .btn7{
+    text-align: center;
     grid-area: fontFamily ;
     background-color: #dedcda;
     border:0.5px solid white;
@@ -194,18 +212,17 @@ header {
 
 .changes-btn.btn12{
     grid-area: switch ;
-    background-color: steelblue;
+    background-color: #dedcda;
 }
 .changes-btn.btn13{
     grid-area: finish ;
-    background-color:  steelblue;
+    background-color:  #dedcda;
 }
 .emojis-container{
     grid-area: emojis;
 }
 .btn14{
     grid-area: save;
-    grid-column:2/4 ;
 }
 
 .gallery {
@@ -217,11 +234,12 @@ header {
 }
 
 .gallery img:hover {
-    box-shadow: -1.5px 6px 16px 0px #ff7f0082;
+    box-shadow: -1.5px 6px 16px 0px #2a2928;
+    /* padding: 5px 0px */
 }
 
 .gallery img {
-    transition: all 0.4s;
+    transition: box-shadow 0.3s;
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -255,7 +273,9 @@ canvas {
 
 .user-prefs {
     display: grid;
-    margin-right: 50px;
+    padding-right: 20px;
+    background-color: #cdcdcb;
+    border-radius: 5px;
 
     /* flex-direction: column; */
     /* justify-content: center; */
@@ -263,20 +283,27 @@ canvas {
 }
 
 .submit {
+    padding-top: 30px;
     margin-bottom: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
+
+.btn.save-btn:focus{
+    background-color: #3dbf26;
+}
 .btn.save-btn{
+    transition: all 0.7s;
     padding: 10px 10px;
     background-color: #2f3c3c;
-    color: #5792a9;
+    color: white;
 }
 
 .submit.submit-tools{
- margin-right: 40px;
+ margin-right: 20px;
 }
 
 .input {
@@ -290,12 +317,12 @@ canvas {
 
 .finish-editing{
     font-family: lato;
-    color: white;
-    font-size: 13px;
-    line-height: 14px;
+    color: #1d1d1d;
+    font-size: 11px;
+    line-height: 12px;
 }
 .changes-btn.download{
-    background-color: #dedcda;;
+    background-color: #eeeeee;;
 }
 
 
@@ -344,7 +371,8 @@ canvas {
 .changes-btn {
     border: 1px solid rgb(222, 220, 218);
     border-radius: 4px;
-    background-color: #ff9800;
+    /* background-color: #ff9800; */
+    background-color: rgb(222 220 218);
     width: 100%;
     height: 100%;
     cursor: pointer;
@@ -354,7 +382,7 @@ canvas {
     position: absolute;
     opacity: 0;
     width: 20px;
-    margin:35px 30px;
+    margin:5px 33px;
     cursor: pointer;
 }
 
@@ -456,10 +484,11 @@ footer{
         /* overflow: hidden; */
     }
     .submit{
-        display: block
+        display: block;
+        padding-top: 0;
     }
     .submit.submit-tools{
-        margin:0px 30px;
+        margin:0px 15px;
     }
     .emojis-list{
         display: flex;
@@ -468,13 +497,15 @@ footer{
     .tools {
         gap: 1px;
         display: grid;
-        grid-template-columns: repeat(4, 25vw);
+        grid-template-columns: repeat(4, 22vw);
         grid-template-rows: repeat(auto-fit,5em);
         grid-template-areas: 
-        "moveUp moveDown sizeUp sizeDown"
-        " fillColor strokeColor switch switch "
-        "alignLeft  alignCenter alignRight trash"
-        "fontFamily fontFamily finish finish"
+        "moveUp  moveDown sizeUp  sizeDown  "
+        "fillColor strokeColor switch finish "
+        "alignLeft alignCenter alignCenter alignRight"
+        "fontFamily fontFamily fontFamily fontFamily"
+        "trash trash trash trash"
+        ". save save ."
         ;
     }  
     .changes-btn.btn9{
@@ -488,7 +519,7 @@ footer{
         height: 90px;
     }
     .changes-btn.btn12{
-        background-color: #ff9800;
+        background-color: #dedcda;
     }
     .footer-text{
         font-size: 8px;
@@ -505,6 +536,14 @@ footer{
     justify-content: center;
     align-items: center;
     width: 100vw;
+  }
+  .all-tools{
+      width: 90vw;
+      display: block;
+      background-color: #dedcda;
+  }
+  .user-prefs{
+      background-color: #dedcda;
   }
     
 }
