--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ header {
     display: flex;
     margin-left: 10px;
     height: 14vh;
+    /* ///////////// */
 
 }
 .nav-btn.btn-return{
@@ -119,6 +120,7 @@ header {
 }
 
 .all-tools{
+    align-items: center;
     display: flex;
     background-color: #66707024;
     height: 60vh;
@@ -126,11 +128,11 @@ header {
     padding-left: 20px;
     border-radius: 10px;
     margin-top: 25px;
+    padding-bottom: 55px;
     
 }
 
 .tools { 
-    margin-top: 20px;
     display: grid;
     gap: 7px;
     grid-template-columns: repeat(5, 40px);
@@ -304,6 +306,7 @@ canvas {
 
 .submit.submit-tools{
  margin-right: 20px;
+ padding-top: 70px;
 }
 
 .input {
